--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^4.8.0"
+    "mongodb": "^4.8.0",
+    "unpipe": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
